# microservices-notes-api

./: .gitignore  LICENSE  README.md  docker-compose.yaml  pyproject.toml
auth/: .dockerignore  .env.template  Dockerfile  alembic.ini  main.py  pyproject.toml
auth/alembic/: env.py
auth/alembic/versions/: 3dbcffefdc88_create_users_table.py  58653e471e6b_init_tables.py  7254da1962bc_added_login_column_in_user.py  800a1fd2a390_init_auth_tables.py
auth/app/: main.py
auth/app/api/v1/: auth.py
auth/app/core/: db.py
auth/app/crud/: user.py
auth/app/models/: __init__.py  notes.py  user.py
auth/app/schemas/: auth.py  response.py
auth/app/services/: auth.py
gateway/: Dockerfile  main.py  pyproject.toml
gateway/app/: main.py
gateway/app/schemas/: auth.py
notes/: .env.template  Dockerfile  alembic.ini  db.py  pyproject.toml
notes/alembic/: env.py
notes/alembic/versions/: c238242c0cba_init_notes_tables.py
notes/app/: main.py
notes/app/api/v1/: notes.py
notes/app/core/: db.py  utils.py
notes/app/core/security/: errors.py  utils.py
notes/app/crud/: note.py
notes/app/models/: __init__.py  note.py  user.py
notes/app/schemas/: auth.py  notes.py  response.py
notes/app/services/: notes.py
tests/: .env.template  config.py  conftest.py
tests/integration/auth/: test_auth_api.py  test_models.py  test_user_model.py
tests/integration/notes/: test_note_model.py  test_notes_api.py
tests/unit/auth/: test_auth_crud.py  test_crud.py  test_models.py
tests/unit/notes/: test_notes_crud.py
user/: .env  Dockerfile  main.py
(+4 files in other folders)
